Final fixes to the ubuntu stuff

--- a/scripts/uberenv/spack_configs/linux_ubuntu_18/packages.yaml
+++ b/scripts/uberenv/spack_configs/linux_ubuntu_18/packages.yaml
@@ -66,12 +66,12 @@ packages:
   cppcheck:
     version: [1.82]
     paths:
-      cppcheck: /usr/bin/cppcheck
+      cppcheck: /usr
     buildable: False
   doxygen:
     version: [1.8.13]
     paths:
-      doxygen: /usr/bin/doxygen
+      doxygen: /usr
     buildable: False   
   python:
     version: [3.6.9]
