--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -123,4 +123,14 @@ if (ENABLE_GTEST)
         NUM_MPI_TASKS     1
         WORKING_DIRECTORY ${TEST_OUTPUT_DIRECTORY} )
 
+    #----------------------
+    # Lua test
+    #----------------------      
+    blt_add_executable(
+        NAME       serac_lua_test
+        SOURCES    serac_lua_test.cpp
+        OUTPUT_DIR ${TEST_OUTPUT_DIRECTORY}
+        DEPENDS_ON solvers coefficients mpi mfem gtest lua)
+
+      
 endif()
