--- a/src/drivers/CMakeLists.txt
+++ b/src/drivers/CMakeLists.txt
@@ -4,9 +4,9 @@
 #
 # SPDX-License-Identifier: (BSD-3-Clause)
 
-blt_add_executable( NAME serac
-                    SOURCES serac.cpp
-                    DEPENDS_ON solvers coefficients mfem mpi
+blt_add_executable( NAME       serac
+                    SOURCES    serac.cpp
+                    DEPENDS_ON common solvers coefficients mfem mpi
                     )
 
 install( TARGETS serac
