--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,11 +23,11 @@ stages:
 
 .pr_workflow:
   rules:
-    - if: '$CI_COMMIT_BRANCH != "master" && $BUILD_DEPS != "ON"' #run only if ...
+    - if: '$CI_COMMIT_BRANCH != "develop" && $BUILD_DEPS != "ON"' #run only if ...
 
-.master_workflow:
+.develop_workflow:
   rules:
-    - if: '$CI_COMMIT_BRANCH == "master" || $BUILD_DEPS == "ON"' #run only if ...
+    - if: '$CI_COMMIT_BRANCH == "develop" || $BUILD_DEPS == "ON"' #run only if ...
 
 ####
 # Template
