Add nested namespace for logger, Capitalize functions to be consistent, fix missing newline on warnings/errors

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -53,3 +53,9 @@ if (ENABLE_GTEST)
     endforeach()
 
 endif()
+
+# Make sure running serac driver doesn't completely fail
+blt_add_test(NAME          serac
+             COMMAND       serac
+             NUM_MPI_TASKS 1 )
+
