--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -17,7 +17,7 @@ if (ENABLE_GTEST)
         NAME       serac_dynamic_solver
         SOURCES    serac_dynamic_solver.cpp
         OUTPUT_DIR ${TEST_OUTPUT_DIRECTORY}
-        DEPENDS_ON solvers mpi mfem gtest )
+        DEPENDS_ON solvers mpi mfem gtest hdf5)
     blt_add_test(
         NAME              serac_dynamic_solver
         COMMAND           serac_dynamic_solver
@@ -31,7 +31,7 @@ if (ENABLE_GTEST)
         NAME       serac_linelastic_solver
         SOURCES    serac_linelastic_solver.cpp
         OUTPUT_DIR ${TEST_OUTPUT_DIRECTORY}
-        DEPENDS_ON solvers mpi mfem gtest )
+        DEPENDS_ON solvers mpi mfem gtest hdf5 )
     blt_add_test(
         NAME              serac_linelastic_solver
         COMMAND           serac_linelastic_solver
@@ -46,7 +46,7 @@ if (ENABLE_GTEST)
         NAME       serac_quasistatic_solver
         SOURCES    serac_quasistatic_solver.cpp
         OUTPUT_DIR ${TEST_OUTPUT_DIRECTORY}
-        DEPENDS_ON solvers coefficients mpi mfem gtest )
+        DEPENDS_ON solvers coefficients mpi mfem gtest hdf5 )
     blt_add_test(
         NAME              serac_quasistatic_solver
         COMMAND           serac_quasistatic_solver
@@ -60,7 +60,7 @@ if (ENABLE_GTEST)
         NAME       serac_thermal_solver
         SOURCES    serac_thermal_solver.cpp
         OUTPUT_DIR ${TEST_OUTPUT_DIRECTORY}
-        DEPENDS_ON solvers mpi mfem gtest )
+        DEPENDS_ON solvers mpi mfem gtest hdf5 )
     blt_add_test(
         NAME              serac_thermal_solver
         COMMAND           serac_thermal_solver
@@ -74,7 +74,7 @@ if (ENABLE_GTEST)
         NAME       serac_thermal_structural_solver
         SOURCES    serac_thermal_structural_solver.cpp
         OUTPUT_DIR ${TEST_OUTPUT_DIRECTORY}
-        DEPENDS_ON solvers mpi mfem gtest coefficients)
+        DEPENDS_ON solvers mpi mfem gtest coefficients hdf5 )
     blt_add_test(
         NAME              serac_thermal_structural_solver
         COMMAND           serac_thermal_structural_solver
@@ -88,7 +88,7 @@ if (ENABLE_GTEST)
         NAME       serac_dtor
         SOURCES    serac_dtor.cpp
         OUTPUT_DIR ${TEST_OUTPUT_DIRECTORY}
-        DEPENDS_ON solvers mpi mfem gtest )
+        DEPENDS_ON solvers mpi mfem gtest hdf5 )
     blt_add_test(
         NAME              serac_dtor
         COMMAND           serac_dtor
@@ -102,7 +102,7 @@ if (ENABLE_GTEST)
         NAME       serac_stdfunction_coefficient
         SOURCES    serac_stdfunction_coefficient.cpp
         OUTPUT_DIR ${TEST_OUTPUT_DIRECTORY}
-        DEPENDS_ON solvers coefficients mpi mfem gtest )
+        DEPENDS_ON solvers coefficients mpi mfem gtest hdf5 )
     blt_add_test(
         NAME              serac_stdfunction_coefficient
         COMMAND           serac_stdfunction_coefficient 
@@ -116,7 +116,7 @@ if (ENABLE_GTEST)
         NAME       serac_wrapper_tests
         SOURCES    serac_wrapper_tests.cpp
         OUTPUT_DIR ${TEST_OUTPUT_DIRECTORY}
-        DEPENDS_ON solvers coefficients mpi mfem gtest )
+        DEPENDS_ON solvers coefficients mpi mfem gtest hdf5 )
     blt_add_test(
         NAME              serac_wrapper_tests
         COMMAND           serac_wrapper_tests
@@ -130,7 +130,7 @@ if (ENABLE_GTEST)
         NAME       serac_component_bc
         SOURCES    serac_component_bc.cpp
         OUTPUT_DIR ${TEST_OUTPUT_DIRECTORY}
-        DEPENDS_ON solvers coefficients mpi mfem gtest )
+        DEPENDS_ON solvers coefficients mpi mfem gtest hdf5 )
     blt_add_test(
         NAME              serac_component_bc
         COMMAND           serac_component_bc
