--- a/src/serac_config.hpp.in
+++ b/src/serac_config.hpp.in
@@ -26,6 +26,8 @@
 
 // Compiler defines for TPLs
 #cmakedefine SERAC_USE_AXOM
+#cmakedefine AXOM_DEBUG
+
 #cmakedefine SERAC_USE_CONDUIT
 #cmakedefine SERAC_USE_FMT
 #cmakedefine SERAC_USE_HDF5
