ci: added support for clang10 in spack config

--- a/scripts/docker/dockerfile_clang-10
+++ b/scripts/docker/dockerfile_clang-10
@@ -1,4 +1,4 @@
-FROM axom/compilers:<NAME>-<MAJ_VER>
+FROM axom/compilers:clang-10
 LABEL maintainer="bramwell1@llnl.gov"
 
 RUN sudo apt-get update -y
@@ -13,6 +13,6 @@ USER serac
 RUN git clone --recursive https://github.com/LLNL/serac.git
 
 # New containers will use Python3
-RUN python3 ./serac/scripts/uberenv/uberenv.py --spack-config-dir=./serac/scripts/uberenv/spack_configs/docker/ --spec=%<NAME>@<VER>.0 --prefix=/home/serac/serac_tpls -k
+RUN python3 ./serac/scripts/uberenv/uberenv.py --spack-config-dir=./serac/scripts/uberenv/spack_configs/docker/ --spec=%clang@10.0.0 --prefix=/home/serac/serac_tpls -k
 
 RUN rm -rf serac
