ci: install system MPI package in docker container, temporarily use current branch for testing CI

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,6 +26,13 @@ strategy:
        COMPILER: 'clang++'
        TEST_TARGET: 'linux_clang4'
        HOST_CONFIG: 'docker-linux-ubuntu16.04-x86_64-clang@4.0.0'
+    linux_clang10:
+       VM_ImageName: 'ubuntu-18.04'
+       Compiler_ImageName: 'seracllnl/tpls:clang-10'
+       CMAKE_EXTRA_FLAGS: ''
+       COMPILER: 'clang++'
+       TEST_TARGET: 'linux_clang10'
+       HOST_CONFIG: 'docker-linux-ubuntu18.04-x86_64-clang@10.0.0'
 
 pool:
   vmImage: $(VM_ImageName)
