--- a/scripts/docker/dockerfile.in
+++ b/scripts/docker/dockerfile.in
@@ -2,7 +2,7 @@ FROM axom/compilers:<NAME>-<MAJ_VER>
 LABEL maintainer="bramwell1@llnl.gov"
 
 RUN sudo apt-get update -y
-RUN sudo apt-get install curl ssh pkg-config build-essential libopenblas-dev -fy
+RUN sudo apt-get install curl ssh pkg-config build-essential libopenblas-dev mpich -fy
 RUN sudo apt-get -qq install -y --no-install-recommends gfortran-7 && sudo update-alternatives --install /usr/bin/gfortran gfortran /usr/bin/gfortran-7 100
 
 RUN sudo useradd -m -s /bin/bash -G sudo serac
@@ -10,9 +10,10 @@ RUN sudo useradd -m -s /bin/bash -G sudo serac
 WORKDIR "/home/serac"
 USER serac
 
-RUN git clone --recursive https://github.com/LLNL/serac.git
+RUN git clone --recursive https://github.com/LLNL/serac.git && cd serac && git checkout ci/essman/clang_10_fixes && cd ..
 
 # New containers will use Python3
 RUN python3 ./serac/scripts/uberenv/uberenv.py --spack-config-dir=./serac/scripts/uberenv/spack_configs/docker/ --spec=%<NAME>@<VER>.0 --prefix=/home/serac/serac_tpls -k
 
 RUN rm -rf serac
+RUN rm -rf serac_tpls/builds
