--- a/scripts/uberenv/spack_configs/docker/packages.yaml
+++ b/scripts/uberenv/spack_configs/docker/packages.yaml
@@ -78,6 +78,9 @@ packages:
     paths:
       openblas: /usr
     buildable: False
+  mpich:
+    paths:
+      mpich@3.3: /usr
 # Globally lock in version of CMake
   cmake:
     version: [3.10.1]
