Adding a new utility function for reading a mesh from a std::string file name

--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -7,17 +7,19 @@
 set(common_headers
     serac_types.hpp
     logger.hpp
+    mesh_utils.hpp
     )
 
 set(common_sources
     logger.cpp
+    mesh_utils.cpp
     )
 
 blt_add_library(
     NAME        common
     HEADERS     ${common_headers}
     SOURCES     ${common_sources}
-    DEPENDS_ON  axom mpi
+    DEPENDS_ON  axom mpi mfem
     )
 
 target_include_directories(common PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
