--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -7,7 +7,7 @@ version: 2
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
-  configuration: src/docs/sphinx/conf.py
+  configuration: src/docs/conf.py
 
 # Optionally build your docs in additional formats such as PDF and ePub
 formats: all
