--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,51 +4,71 @@
 #
 # SPDX-License-Identifier: (BSD-3-Clause)
 #
+jobs:
+- job: Build & Test
+  variables:
+    DO_BUILD: 'yes'
+    DO_TEST: 'yes'
+    DO_CLEAN: 'no'
 
-variables:
-  DO_BUILD: 'yes'
-  DO_TEST: 'yes'
-  DO_CLEAN: 'no'
+  strategy:
+    matrix:
+    linux_gcc8:
+        VM_ImageName: 'ubuntu-16.04'
+        Compiler_ImageName: 'seracllnl/tpls:gcc-8'
+        CMAKE_EXTRA_FLAGS: ''
+        COMPILER: 'g++'
+        TEST_TARGET: 'linux_gcc8'
+        HOST_CONFIG: 'docker-linux-ubuntu16.04-x86_64-gcc@8.1.0'
+    linux_clang4:
+        VM_ImageName: 'ubuntu-16.04'
+        Compiler_ImageName: 'seracllnl/tpls:clang-4'
+        CMAKE_EXTRA_FLAGS: ''
+        COMPILER: 'clang++'
+        TEST_TARGET: 'linux_clang4'
+        HOST_CONFIG: 'docker-linux-ubuntu16.04-x86_64-clang@4.0.0'
+    linux_clang10:
+        VM_ImageName: 'ubuntu-18.04'
+        Compiler_ImageName: 'seracllnl/tpls:clang-10'
+        CMAKE_EXTRA_FLAGS: ''
+        COMPILER: 'clang++'
+        TEST_TARGET: 'linux_clang10'
+        HOST_CONFIG: 'docker-linux-ubuntu18.04-x86_64-clang@10.0.0'
 
-strategy:
-  matrix:
-   linux_gcc8:
-      VM_ImageName: 'ubuntu-16.04'
-      Compiler_ImageName: 'seracllnl/tpls:gcc-8'
-      CMAKE_EXTRA_FLAGS: ''
-      COMPILER: 'g++'
-      TEST_TARGET: 'linux_gcc8'
-      HOST_CONFIG: 'docker-linux-ubuntu16.04-x86_64-gcc@8.1.0'
-   linux_clang4:
-       VM_ImageName: 'ubuntu-16.04'
-       Compiler_ImageName: 'seracllnl/tpls:clang-4'
-       CMAKE_EXTRA_FLAGS: ''
-       COMPILER: 'clang++'
-       TEST_TARGET: 'linux_clang4'
-       HOST_CONFIG: 'docker-linux-ubuntu16.04-x86_64-clang@4.0.0'
-   linux_clang10:
-       VM_ImageName: 'ubuntu-18.04'
-       Compiler_ImageName: 'seracllnl/tpls:clang-10'
-       CMAKE_EXTRA_FLAGS: ''
-       COMPILER: 'clang++'
-       TEST_TARGET: 'linux_clang10'
-       HOST_CONFIG: 'docker-linux-ubuntu18.04-x86_64-clang@10.0.0'
+  pool:
+    vmImage: $(VM_ImageName)
 
-pool:
-  vmImage: $(VM_ImageName)
+  steps:
+  - checkout: self
+    clean: true
+    submodules: recursive
+  - script:  |
+      echo " -e $TEST_TARGET -e $COMPILER -e $DO_BUILD -e $DO_TEST -e $CMAKE_EXTRA_FLAGS $(Compiler_ImageName) ./scripts/azure-pipelines/linux-build_and_test.sh"
+      docker run --rm -v `pwd`:/home/serac/serac -e TEST_TARGET -e COMPILER -e DO_BUILD -e DO_TEST -e DO_CLEAN -e HOST_CONFIG -e CMAKE_EXTRA_FLAGS $(Compiler_ImageName) ./serac/scripts/azure-pipelines/linux-build_and_test.sh
 
-steps:
-- checkout: self
-  clean: true
-  submodules: recursive
-- script:  |
-    echo " -e $TEST_TARGET -e $COMPILER -e $DO_BUILD -e $DO_TEST -e $CMAKE_EXTRA_FLAGS $(Compiler_ImageName) ./scripts/azure-pipelines/linux-build_and_test.sh"
-    docker run --rm -v `pwd`:/home/serac/serac -e TEST_TARGET -e COMPILER -e DO_BUILD -e DO_TEST -e DO_CLEAN -e HOST_CONFIG -e CMAKE_EXTRA_FLAGS $(Compiler_ImageName) ./serac/scripts/azure-pipelines/linux-build_and_test.sh
+    displayName: '$(TEST_TARGET) Build & Test'
+  - task: PublishTestResults@2
+    inputs:
+      testResultsFormat: 'cTest'
+      testResultsFiles: '**/Test.xml'
+      testRunTitle: '$(TEST_TARGET) Tests'
+      failTaskOnFailedTests: true
 
-  displayName: '$(TEST_TARGET) Build & Test'
-- task: PublishTestResults@2
-  inputs:
-    testResultsFormat: 'cTest'
-    testResultsFiles: '**/Test.xml'
-    testRunTitle: '$(TEST_TARGET) Tests'
-    failTaskOnFailedTests: true
+- job: Check Style
+  variables:
+    DO_STYLE_CHECK: 'yes'
+    VM_ImageName: 'ubuntu-18.04'
+    Compiler_ImageName: 'seracllnl/tpls:clang-10'
+    CMAKE_EXTRA_FLAGS: ''
+    COMPILER: 'clang++'
+    TEST_TARGET: 'linux_clang10'
+    HOST_CONFIG: 'docker-linux-ubuntu18.04-x86_64-clang@10.0.0'
+  pool:
+      vmImage: $(VM_ImageName)
+  steps:
+  - checkout: self
+    clean: true
+    submodules: recursive
+    - script:  |
+      echo " -e $TEST_TARGET -e $COMPILER -e $DO_STYLE_CHECK -e $CMAKE_EXTRA_FLAGS $(Compiler_ImageName) ./scripts/azure-pipelines/linux-check.sh"
+      docker run --rm -v `pwd`:/home/serac/serac -e TEST_TARGET -e COMPILER -e DO_STYLE_CHECK -e HOST_CONFIG -e CMAKE_EXTRA_FLAGS $(Compiler_ImageName) ./serac/scripts/azure-pipelines/linux-check.sh
