ci: fix style back to how it was, add name for new CI job

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -72,3 +72,4 @@ jobs:
   - script:  |
       echo " -e $TEST_TARGET -e $COMPILER -e $DO_STYLE_CHECK -e $CMAKE_EXTRA_FLAGS $(Compiler_ImageName) ./scripts/azure-pipelines/linux-check.sh"
       docker run --rm -v `pwd`:/home/serac/serac -e TEST_TARGET -e COMPILER -e DO_STYLE_CHECK -e HOST_CONFIG -e CMAKE_EXTRA_FLAGS $(Compiler_ImageName) ./serac/scripts/azure-pipelines/linux-check.sh
+    displayName: '$(TEST_TARGET) Style Check'
