--- a/.gitlab/ci/build_quartz.yml
+++ b/.gitlab/ci/build_quartz.yml
@@ -57,11 +57,15 @@ gcc_8_1_0 (PR build_on_quartz):
     HOST_CONFIG: "quartz-toss_3_x86_64_ib-gcc@8.1.0.cmake"
   extends: .pr_build_on_quartz
 
-intel_19_0_4 (PR build_on_quartz):
-  variables:
-    COMPILER: "intel@19.0.4"
-    HOST_CONFIG: "quartz-toss_3_x86_64_ib-intel@19.0.4.cmake"
-  extends: .pr_build_on_quartz
+# Intel C++ compiler has poor C++17 support and will no longer be 
+# supported until issues are resolved. 
+# See CMPLRIL0-32507
+# https://community.intel.com/t5/Intel-C-Compiler/Converting-constructor-issue-with-std-variant/td-p/1182651
+# intel_19_0_4 (PR build_on_quartz):
+#   variables:
+#     COMPILER: "intel@19.0.4"
+#     HOST_CONFIG: "quartz-toss_3_x86_64_ib-intel@19.0.4.cmake"
+#   extends: .pr_build_on_quartz
 
 clang_9_0_0 (Main build_with_deps_on_quartz):
   variables:
@@ -75,8 +79,8 @@ gcc_8_1_0 (Main build_with_deps_on_quartz):
     SPEC: "@develop%${COMPILER}"
   extends: .main_build_with_deps_on_quartz
 
-intel_19_0_4 (Main build_with_deps_on_quartz):
-  variables:
-    COMPILER: "intel@19.0.4"
-    SPEC: "@develop%${COMPILER}"
-  extends: .main_build_with_deps_on_quartz
+# intel_19_0_4 (Main build_with_deps_on_quartz):
+#   variables:
+#     COMPILER: "intel@19.0.4"
+#     SPEC: "@develop%${COMPILER}"
+#   extends: .main_build_with_deps_on_quartz
