cleanup: move BC code to its own header file, create common.hpp, remove get from accessor name

--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -5,6 +5,8 @@
 # SPDX-License-Identifier: (BSD-3-Clause)
 
 set(common_headers
+    boundary_condition.hpp
+    common.hpp
     serac_types.hpp
     logger.hpp
     mesh_utils.hpp
