organization: move FEState into own header, move variant coef into top-level serac namespace

--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -7,6 +7,7 @@
 set(common_headers
     boundary_condition.hpp
     common.hpp
+    finite_element_state.hpp
     serac_types.hpp
     logger.hpp
     mesh_utils.hpp
