feat: add macros for conditionally enabling actual annotations, add init/terminate functions for handling caliper manager object

--- a/src/serac_config.hpp.in
+++ b/src/serac_config.hpp.in
@@ -34,6 +34,7 @@
 #cmakedefine SERAC_USE_MFEM
 #cmakedefine SERAC_USE_MPI
 #cmakedefine SERAC_USE_TRIBOL
+#cmakedefine SERAC_USE_CALIPER
 
 
 #endif  /* SERAC_CONFIG_CPP */
