fix: rename AlgebraicSolver to EquationSolver, add more useful docs for solid operator solve

--- a/src/solvers/CMakeLists.txt
+++ b/src/solvers/CMakeLists.txt
@@ -5,8 +5,8 @@
 # SPDX-License-Identifier: (BSD-3-Clause) 
 
 set(solvers_sources
-    algebraic_solver.cpp
     base_solver.cpp
+    equation_solver.cpp
     nonlinear_solid_solver.cpp
     nonlinear_solid_operators.cpp
     thermal_solver.cpp
@@ -16,8 +16,8 @@ set(solvers_sources
     )
 
 set(solvers_headers
-    algebraic_solver.hpp
     base_solver.hpp
+    equation_solver.hpp
     nonlinear_solid_solver.hpp
     nonlinear_solid_operators.hpp
     thermal_solver.hpp
