--- a/scripts/uberenv/spack_configs/blueos_3_ppc64le_ib_p9/compilers.yaml
+++ b/scripts/uberenv/spack_configs/blueos_3_ppc64le_ib_p9/compilers.yaml
@@ -133,5 +133,30 @@ compilers:
     operating_system: rhel7
     target: ppc64le
     modules: []
-    environment: {}
+    environment:
+      set:
+        SPACK_TARGET_ARGS: ""
     extra_rpaths: []
+
+# This is the one that works
+- compiler:
+    environment:
+      # Temporary workaround: Spack issue #18156
+      set:
+        SPACK_TARGET_ARGS: ""
+    extra_rpaths: []
+    flags:
+      # Required as spack cannot recognize compiler-specific linker
+      # flags in mixed toolchains
+      ldlibs: -lgfortran
+    modules: []
+    operating_system: rhel7
+    paths:
+      cc:  /usr/tce/packages/clang/clang-upstream-2019.08.15/bin/clang
+      cxx: /usr/tce/packages/clang/clang-upstream-2019.08.15/bin/clang++
+      # Required to guarantee consistency with underscored LAPACK
+      # references in MFEM
+      f77: /usr/tce/packages/gcc/gcc-8.3.1/bin/gfortran
+      fc: /usr/tce/packages/gcc/gcc-8.3.1/bin/gfortran
+    spec: clang@upstream_gfortran
+    target: ppc64le
