fix: move install commands into subdirs for compatibility with CMake < 3.13

--- a/src/coefficients/CMakeLists.txt
+++ b/src/coefficients/CMakeLists.txt
@@ -25,6 +25,11 @@ blt_add_library(
 target_include_directories(coefficients PUBLIC 
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/..>
     $<INSTALL_INTERFACE:include>
-)
+    )
 
 install(FILES ${coefficients_headers} DESTINATION include/coefficients )
+
+install(TARGETS              coefficients
+        EXPORT               serac-targets
+        DESTINATION          lib
+        )
