--- a/src/integrators/CMakeLists.txt
+++ b/src/integrators/CMakeLists.txt
@@ -30,6 +30,11 @@ blt_add_library(
 target_include_directories(integrators PUBLIC 
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/..>
     $<INSTALL_INTERFACE:include>
-)
+    )
 
 install(FILES ${integrators_headers} DESTINATION include/integrators )
+
+install(TARGETS              integrators 
+        EXPORT               serac-targets
+        DESTINATION          lib
+        )
