--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -75,7 +75,9 @@ if (ENABLE_GTEST)
                      DEPENDS_ON cuda)
     blt_add_executable( NAME       serac_cuda_smoketest
                         SOURCES    serac_cuda_smoketest.cpp 
-                        DEPENDS_ON serac_cuda_smoketest_kernel gtest cuda_runtime)
+                        OUTPUT_DIR ${TEST_OUTPUT_DIRECTORY}
+                        DEPENDS_ON serac_cuda_smoketest_kernel ${test_dependencies} cuda_runtime
+                        FOLDER      serac/tests)
     blt_add_test( NAME          serac_cuda_smoketest
                   COMMAND       serac_cuda_smoketest )
 
