fix: enable cuda smoketest only when cuda enabled

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -69,17 +69,19 @@ if (ENABLE_GTEST)
                      NUM_MPI_TASKS 1 )
     endforeach()
 
-    # CUDA smoke test
-    blt_add_library( NAME       serac_cuda_smoketest_kernel
-                     SOURCES    serac_cuda_smoketest_kernel.cpp 
-                     DEPENDS_ON cuda)
-    blt_add_executable( NAME       serac_cuda_smoketest
-                        SOURCES    serac_cuda_smoketest.cpp 
-                        OUTPUT_DIR ${TEST_OUTPUT_DIRECTORY}
-                        DEPENDS_ON serac_cuda_smoketest_kernel ${test_dependencies} cuda_runtime
-                        FOLDER      serac/tests)
-    blt_add_test( NAME          serac_cuda_smoketest
-                  COMMAND       serac_cuda_smoketest )
+    if(ENABLE_CUDA)
+        # CUDA smoke test
+        blt_add_library( NAME       serac_cuda_smoketest_kernel
+                        SOURCES    serac_cuda_smoketest_kernel.cpp 
+                        DEPENDS_ON cuda)
+        blt_add_executable( NAME       serac_cuda_smoketest
+                            SOURCES    serac_cuda_smoketest.cpp 
+                            OUTPUT_DIR ${TEST_OUTPUT_DIRECTORY}
+                            DEPENDS_ON serac_cuda_smoketest_kernel ${test_dependencies} cuda_runtime
+                            FOLDER      serac/tests)
+        blt_add_test( NAME          serac_cuda_smoketest
+                    COMMAND       serac_cuda_smoketest )
+    endif()
 
 endif()
 
